<resources>
    <string name="app_name">Lab_exam_2</string>
    <string name="notificationText">notification</string>
    <string name="Pop_up_Notification">Pop-up Notification</string>
    <string name="contact">Contact Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="Terms">Terms and Conditions</string>
    <string name="Cookies">Cookies Policy</string>
    <string name="About">About Us</string>
    <string name="setting">Settings</string>
    <string name="capa">Cappucino</string>
    <string name="oat">with oats</string>
    <string name="discription1">A cappucino is an approximately 150ml(5oz). beverage with 25ml or epresso coffee and 85ml of fresh milk...</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="buynow">Buy Now</string>
    <string name="lk">LKR 550</string>
    <string name="get1">"Fall In Love With Coffee Blissful Delight "</string>
    <string name="get2">The best grain, the finest roast, the powerful flavour</string>
    <string name="get3">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="home1">Coffee is like a HUG in a MUG</string>
    <string name="home2">Search your favourite coffee</string>
    <string name="home5">Macchiato</string>
    <string name="favourite">Favourite Coffee</string>
    <string name="favourite1">As the most popular coffee drink out there, the latte is comprised of a shot</string>
    <string name="skip">Skip</string>
    <string name="coffe1">A new reason to fall in love with coffee, every season</string>
    <string name="back">Back</string>
    <string name="fast">+Fast Deliver is a fast growing</string>
    <string name="login1">Sign Up</string>
    <string name="sign2">First Name</string>
    <string name="sign3">Email</string>
    <string name="sign">Phone no.</string>
    <string name="pasword">Password</string>
    <string name="sign6">Already have an account?</string>
    <string name="signin1">Sign In</string>
    <string name="signin2">Forgot Password?</string>
    <string name="signin4">Don\'t have an account?</string>
    <string name="signin7">sign in with google</string>
    <string name="signin6">Sign in with facebook</string>
    <string name="order1">Delivery</string>
    <string name="order2">Pickup</string>
    <string name="order3">Delivery Address</string>
    <string name="order4">Add Note</string>
    <string name="order5">1 disscount is applied</string>
    <string name="order6">Cash</string>
    <string name="order7">Order</string>
    <string name="profile1">Location</string>
    <string name="profile4">my Information</string>
    <string name="profile3">My Address</string>
    <string name="profile2">Change Password</string>
    <string name="profile6">Log Out</string>
    <string name="success">Payment Successfully...!</string>
</resources>