<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/group_56" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signInText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="165dp"
                android:translationY="280dp" />

            <EditText
                android:id="@+id/eName"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/sign2"
                android:inputType="textPersonName"
                android:translationX="50dp"
                android:translationY="320dp" />


            <EditText
                android:id="@+id/eEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign3"
                android:inputType="textEmailAddress"
                android:translationX="50dp"
                android:translationY="350dp" />


            <EditText
                android:id="@+id/editTextPhone1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/sign"
                android:inputType="phone"
                android:translationX="50dp"
                android:translationY="380dp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pasword"
                android:inputType="textPassword"
                android:translationX="50dp"
                android:translationY="410dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#B7F57F17"
                android:text="Sign Up"
                android:translationX="100dp"
                android:translationY="440dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign6"
                android:translationX="100dp"
                android:translationY="470dp" />

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign In"
                android:textColor="#3EEF04"
                android:translationX="270dp"
                android:translationY="450dp" />


        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>