<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getstarted">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/get" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:text="@string/get1"
            android:textAlignment="center"
            android:textColor="#BCFFFFFF"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            android:translationX="10dp"
            android:translationY="300dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:text="@string/get2"
            android:textAlignment="center"
            android:textColor="#BCFFFFFF"
            android:textSize="34sp"
            android:textStyle="italic"
            android:translationX="10dp"
            android:translationY="540dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/light_gray"
            android:text="@string/get3"
            android:textSize="24sp"
            android:textStyle="bold" />


    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>