<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboardscreen1">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="409dp"
        android:layout_height="919dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/group_43__1_" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favourite"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            android:translationX="60dp"
            android:translationY="450dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="159dp"
            android:text="@string/favourite1"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold|italic"
            android:translationY="500dp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#B7F57F17"
            android:text="@string/skip"
            android:translationX="30dp"
            android:translationY="680dp"
            android:contentDescription="google"
            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:translationX="200dp"
            android:translationY="700dp"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:translationX="250dp"
            android:translationY="700dp"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:translationX="310dp"
            android:translationY="680dp"
            android:contentDescription="navigate"
            app:srcCompat="@drawable/vector__3_" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:translationX="150dp"
            android:translationY="700dp"
            app:srcCompat="@drawable/ellipse_3" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>