<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details">

  <!-- ImageView8 -->
  <ImageView
      android:id="@+id/imageView08"
      android:layout_width="37dp"
      android:layout_height="48dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.041"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.034"
      app:srcCompat="@drawable/vector__5_"
      android:contentDescription="Icon for user profile" />

  <!-- ImageView9 -->

  <!-- ImageButton5 -->

  <ImageView
      android:id="@+id/imageView9"
      android:layout_width="282dp"
      android:layout_height="212dp"
      android:layout_marginTop="96dp"
      android:contentDescription="Main product image"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.503"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/mk" />

  <ImageButton
      android:id="@+id/imageButton09"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="3dp"
      android:layout_marginBottom="671dp"
      android:translationY="6dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.895"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.071"
      app:srcCompat="@drawable/_icon__user___2_"
      android:contentDescription="User icon button" />

  <!-- ImageView15 -->

  <!-- ImageButton6 -->

  <!-- ImageButton7 -->

  <!-- ImageButton8 -->

  <!-- ImageButton9 -->

  <!-- ImageButton10 -->

  <!-- ImageView16 -->

  <!-- ImageView17 -->

  <!-- ImageView18 -->

  <ImageView
      android:id="@+id/imageView16"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="240dp"
      android:layout_marginTop="336dp"
      android:contentDescription="46_1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/group_46__2_" />

  <ImageView
      android:id="@+id/imageView17"
      android:layout_width="53dp"
      android:layout_height="50dp"
      android:layout_marginStart="304dp"
      android:layout_marginTop="336dp"
      android:contentDescription="Vector 6 image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/vector__6_" />

  <!-- ImageView19 -->

  <!-- ImageView20 -->
  <ImageView
      android:id="@+id/imageView18"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="372dp"
      android:contentDescription="Star icon"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/star_9" />

  <ImageView
      android:id="@+id/imageView19"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="156dp"
      android:layout_marginTop="544dp"
      android:contentDescription="Group 48 image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/group_48" />

  <!-- ImageView21 -->

  <!-- TextView6 -->

  <!-- TextView7 -->

  <!-- TextView8 -->

  <ImageView
      android:id="@+id/imageView20"
      android:layout_width="73dp"
      android:layout_height="54dp"
      android:layout_marginStart="272dp"
      android:layout_marginTop="544dp"
      android:contentDescription="Group 49 image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/group_49" />

  <ImageView
      android:id="@+id/imageView21"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="544dp"
      android:contentDescription="Group 47 image"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/group_47__1_" />

  <!-- TextView9 -->

  <TextView
      android:id="@+id/textView6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="636dp"
      android:text="@string/price"
      android:textColor="#040404"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="16dp"
      android:text="@string/lk"
      android:textColor="#F57F17"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="512dp"
      android:text="@string/size"
      android:textColor="#101010"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <!-- TextView10 -->

  <!-- TextView11 -->

  <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="408dp"
      android:text="Description"
      android:textColor="#101010"
      android:textSize="16sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView10"
      android:layout_width="274dp"
      android:layout_height="53dp"
      android:layout_marginStart="40dp"
      android:layout_marginTop="12dp"
      android:text="@string/discription1"
      android:textColor="#121212"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView9" />

  <!-- TextView12 -->

  <TextView
      android:id="@+id/textView11"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="40dp"
      android:layout_marginTop="312dp"
      android:text="@string/capa"
      android:textColor="#090909"
      android:textSize="16sp"
      android:textStyle="bold"
      android:translationX="-2dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView12"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="37dp"
      android:layout_marginTop="8dp"
      android:text="@string/oat"
      android:textColor="#0D0D0D"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <!-- TextView13 -->

  <!-- TextView14 -->
  <TextView
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="76dp"
      android:layout_marginTop="372dp"
      android:text="4.9"
      android:textColor="#101010"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <!-- TextView15 -->

  <!-- Button7 -->

  <TextView
      android:id="@+id/textView14"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="112dp"
      android:layout_marginTop="372dp"
      android:text="(280)"
      android:textColor="#121212"
      android:textColorHighlight="#090909"
      android:textSize="12sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/button15"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="648dp"
      android:layout_marginEnd="80dp"
      android:background="#B7F57F17"
      android:text="@string/buynow"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  <LinearLayout
      android:layout_width="409dp"
      android:layout_height="112dp"
      android:layout_marginStart="1dp"
      android:layout_marginTop="1dp"
      android:layout_marginEnd="1dp"
      android:layout_marginBottom="1dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/frameLayout"
      app:layout_constraintVertical_bias="0.5">

    <ImageView
        android:id="@+id/imageView61"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:translationY="50dp"
        app:srcCompat="@drawable/_icon__home___1_" />

    <ImageView
        android:id="@+id/imageView58"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:translationY="50dp"
        app:srcCompat="@drawable/layer_3" />

    <ImageView
        android:id="@+id/imageView60"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:translationY="50dp"
        app:srcCompat="@drawable/vector__2_" />

    <ImageView
        android:id="@+id/imageView63"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:translationY="50dp"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/imageView62"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:translationY="50dp"
        app:srcCompat="@drawable/_icon__user___2_" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>